# libgfx

./: .gitignore  CMakeLists.txt  Justfile  README.md  TODO.md  gfx.pc  libgfx.pc  t  test.cc
.cache/clangd/index/: circle.cc.DBB8DE8F7F4293A3.idx  circle.hh.6846E88F4E191468.idx  detail.hh.4E4807D90B85D999.idx  gfx.cc.82298755E20CA3B7.idx  gfx.hh.638354302DB74BD0.idx  gl.h.9C60AC6A2C6FC522.idx  line.cc.5DDC1F24E05F9FDB.idx  line.hh.20C29D1D17AB33A6.idx  rectangle.cc.B38FC25871B5E15A.idx  rectangle.hh.7BE9FCC3EB4635BC.idx  renderer.hh.117E9C4BC002F620.idx  shaders.hh.5DFE547F1D90FD6D.idx  stb_image.h.CB06E85BA7E8656A.idx  test.cc.048C1B5E8D56D6D7.idx  text.cc.6AB17E4CAD51C4CB.idx  text.hh.8A0D3CFE53105814.idx  texture.cc.A0FF30E4554426B0.idx  texture.hh.2135D7EF14CB9ED5.idx  triangle.cc.02FDAC9E069EA8C2.idx  triangle.hh.FE8B244EECA8188C.idx  types.hh.8C7A30FC26F97359.idx  vec.hh.7CE1BFCB73760653.idx  window.cc.D8A0D501251F85C2.idx  window.hh.3CFFE7446363D925.idx
.github/workflows/: cmake.yml
cmake/: gfx-config.cmake
examples/: CMakeLists.txt  Justfile  animated_clock.cc  animation.cc  clock.cc  cubic_bezier.cc  hello_world.cc  index.html  offscreen_rendering.cc  quadratic_bezier.cc  shapes.cc  simple.cc  spritesheet.cc
examples/clock/: build.sh  main.cc
examples/gtkmm/: CMakeLists.txt  main.cc
examples/web/: CMakeLists.txt  Justfile  build.sh  index.html  main.cc
include/: AnimatedTexture.h  Button.h  ExternalContext.h  Font.h  Rect.h  Renderer.h  Spritesheet.h  Texture.h  Vec.h  Window.h  animated_texture.h  animation.h  button.h  color.h  color.hh  external_context.h  gfx.h  gfx.hh  io.h  map.hh  rect.h  renderer.h  renderer.hh  spritesheet.h  surface.h  texture.h  texture.hh  types.h  types.hh  vec.h  vec.hh  window.h  window.hh
include/detail/: circle.hh  detail.hh  line.hh  rectangle.hh  text.hh  texture.hh  triangle.hh
include/gfx/: animated_texture.h  animation.h  button.h  color.h  error.h  external_context.h  font.h  gfx.h  input.h  interpolators.h  lerp.h  literals.h  rect.h  renderer.h  rotation.h  spritesheet.h  surface.h  texture.h  vec.h  window.h
lib/: CMakeLists.txt
lib/.cache/clangd/index/: circle.cc.AF43E40C8C46B40A.idx  circle.hh.03FEE624A1459A78.idx  detail.hh.A8B6567E91114561.idx  gfx.cc.E9F28F70252A27B6.idx  gfx.hh.27018A8BD9AB8756.idx  gl.h.33F662036065C9B7.idx  line.cc.417F4658CF38218F.idx  line.hh.C8B40BE74DCF5491.idx  rectangle.cc.2EA61DFFD81B4B8E.idx  rectangle.hh.BBEA756A6A536C05.idx  renderer.hh.A49CF11701BE09C4.idx  shaders.hh.7BBB7758F2544328.idx  stb_image.h.AD46E7EDC3594488.idx  test.cc.13091D8F2650FE5B.idx  text.cc.C6E0C5E46C362C70.idx  text.hh.30436E159F72F8F2.idx  texture.cc.8DB35FA9482481F8.idx  texture.hh.8D6F0D24FCEAA453.idx  triangle.cc.77B7583EF6F28035.idx  triangle.hh.419A3DD46F595922.idx  types.hh.2179939AFE5D3E1A.idx  vec.hh.133427431071117A.idx  window.cc.8CCE2731A60FBFF7.idx  window.hh.3726BBD006599A14.idx
lib/include/: renderer.hh  window.hh
lib/include/detail/: text.hh  texture.hh
lib/shaders/: batched.frag  default.frag  default.vert  text.vert  texture.vert
lib/src/: circle.cc  gfx.cc  text.cc  texture.cc  window.cc
shaders/: batched.vert  circle.frag  circle.vert  gen.py  generate.py  text.frag  texture.frag  texture.vert
shaders/es/: default.frag  text.frag  texture.frag  texture.vert
shaders/gl/: default.frag  texture.frag  texture.vert
shaders/gles3/: bezier.frag  circle.frag  default.vert
shaders/opengl4.5/: bezier.frag  circle.frag  default.vert  text.frag
src/: CMakeLists.txt  Font.cc  FontImpl.cc  FontImpl.h  Glyph.h  RaiiWrapper.h  Renderer.cc  RendererImpl.cc  RendererImpl.h  Texture.cc  TextureImpl.cc  TextureImpl.h  Window.cc  WindowImpl.cc  WindowImpl.h  circle.cc  font.cc  font.hh  font_impl.cc  font_impl.h  gfx.cc  glyph.h  glyph.hh  input.cc  io.cc  line.cc  opengl.cc  opengl.h  rectangle.cc  renderer.cc  renderer_impl.cc  renderer_impl.h  shaders.h  shaders.hh  test.cc  text.cc  texture.cc  texture_impl.cc  texture_impl.h  triangle.cc  (+6 more)
src/shapes/: CMakeLists.txt  CircleRenderer.cc  CircleRenderer.h  LineRenderer.cc  LineRenderer.h  RectangleRenderer.cc  RectangleRenderer.h  TextRenderer.cc  TextRenderer.h  TextureRenderer.cc  TextureRenderer.h  TriangleRenderer.cc  TriangleRenderer.h  bezier_renderer.cc  bezier_renderer.h  circle.cc  circle.hh  circle_renderer.cc  circle_renderer.h  line.cc  line.hh  line_renderer.cc  line_renderer.h  rectangle.cc  rectangle.hh  rectangle_renderer.cc  rectangle_renderer.h  text.cc  text.hh  text_renderer.cc  text_renderer.h  texture.cc  texture.hh  texture_renderer.cc  texture_renderer.h  triangle.cc  triangle.hh  triangle_renderer.cc  triangle_renderer.h
