cmake_minimum_required(VERSION 3.16)
set(CMAKE_CXX_STANDARD 23)
set(CMAKE_CXX_STANDARD_REQUIRED TRUE)
set(CMAKE_EXPORT_COMPILE_COMMANDS TRUE)
set(CMAKE_COLOR_DIAGNOSTICS ON)

project(Examples)

find_package(gfx REQUIRED)

file(COPY index.html DESTINATION ${CMAKE_CURRENT_BINARY_DIR})

add_executable(hello_world hello_world.cc)
add_executable(quadratic_bezier quadratic_bezier.cc)
add_executable(cubic_bezier cubic_bezier.cc)
add_executable(animation animation.cc)
add_executable(spritesheet spritesheet.cc)
add_executable(clock clock.cc)
add_executable(offscreen_rendering offscreen_rendering.cc)
add_executable(shapes shapes.cc)

if (EMSCRIPTEN)
    target_link_options(shapes PRIVATE -sEXPORT_ES6 -sEXPORT_NAME=shapes)
    target_link_options(offscreen_rendering PRIVATE -sEXPORT_ES6 -sEXPORT_NAME=offscreen_rendering)
    target_link_options(clock PRIVATE -sEXPORT_ES6 -sEXPORT_NAME=clock)
    target_link_options(animation PRIVATE -sEXPORT_ES6 -sEXPORT_NAME=animation)
    target_link_options(spritesheet PRIVATE -sEXPORT_ES6 -sEXPORT_NAME=spritesheet)
    target_link_options(hello_world PRIVATE -sEXPORT_ES6 -sEXPORT_NAME=hello_world)
    target_link_options(quadratic_bezier PRIVATE -sEXPORT_ES6 -sEXPORT_NAME=quadratic_bezier)
    target_link_options(cubic_bezier PRIVATE -sEXPORT_ES6 -sEXPORT_NAME=cubic_bezier)
endif()

target_link_libraries(shapes PRIVATE gfx)
target_link_libraries(offscreen_rendering PRIVATE gfx)
target_link_libraries(clock PRIVATE gfx)
target_link_libraries(animation PRIVATE gfx)
target_link_libraries(spritesheet PRIVATE gfx)
target_link_libraries(hello_world PRIVATE gfx)
target_link_libraries(quadratic_bezier PRIVATE gfx)
target_link_libraries(cubic_bezier PRIVATE gfx)

target_compile_options(hello_world PRIVATE -Wall -Wextra -O3 -ggdb)
target_compile_options(quadratic_bezier PRIVATE -Wall -Wextra -O3 -ggdb)
target_compile_options(cubic_bezier PRIVATE -Wall -Wextra -O3 -ggdb)
target_compile_options(spritesheet PRIVATE -Wall -Wextra -O3 -ggdb)
target_compile_options(animation PRIVATE -Wall -Wextra -O3 -ggdb)
target_compile_options(clock PRIVATE -Wall -Wextra -O3 -ggdb)
target_compile_options(shapes PRIVATE -Wall -Wextra -O3 -ggdb)
target_compile_options(offscreen_rendering PRIVATE -Wall -Wextra -O3 -ggdb)
